# ayzit

./: CMakeLists.txt  LICENSE  README.md
source/: CMakeLists.txt  main.cpp  main.hpp
source/ResourceFiles/: Ayzit.rc  CMakeLists.txt  resource.hpp
source/System/Windows/: CMakeLists.txt  windows.hpp
